src/main/java/org/mar9000/blog/grammar/BlogParser.java
// Generated from src/org/mar9000/blog/grammar/BlogParser.g4 by ANTLR 4.2
package org.mar9000.blog.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BlogParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMA=8, END_ONE_LINE=10, WORDS=7, TAGS=4, CH=13, ABSTRACT=5, CONTENT=6, 
		NL=9, DATE=3, LINE=11, URL=2, END_MORE_LINES=12, TITLE=1;
	public static final String[] tokenNames = {
		"<INVALID>", "'title:'", "'url:'", "'date:'", "'tags:'", "'abstract:'", 
		"'content:'", "WORDS", "','", "NL", "END_ONE_LINE", "LINE", "END_MORE_LINES", 
		"CH"
	};
	public static final int
		RULE_post = 0, RULE_title = 1, RULE_url = 2, RULE_date = 3, RULE_tags = 4, 
		RULE_dex = 5, RULE_content = 6, RULE_chars = 7;
	public static final String[] ruleNames = {
		"post", "title", "url", "date", "tags", "dex", "content", "chars"
	};

	@Override
	public String getGrammarFileName() { return "BlogParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BlogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PostContext extends ParserRuleContext {
		public TagsContext tags() {
			return getRuleContext(TagsContext.class,0);
		}
		public DexContext dex() {
			return getRuleContext(DexContext.class,0);
		}
		public UrlContext url() {
			return getRuleContext(UrlContext.class,0);
		}
		public TitleContext title() {
			return getRuleContext(TitleContext.class,0);
		}
		public ContentContext content() {
			return getRuleContext(ContentContext.class,0);
		}
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public PostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_post; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).enterPost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).exitPost(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlogParserVisitor ) return ((BlogParserVisitor<? extends T>)visitor).visitPost(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostContext post() throws RecognitionException {
		PostContext _localctx = new PostContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_post);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(16); title();
			setState(17); url();
			setState(18); date();
			setState(19); tags();
			setState(20); dex();
			setState(21); content();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TitleContext extends ParserRuleContext {
		public TerminalNode END_ONE_LINE() { return getToken(BlogParser.END_ONE_LINE, 0); }
		public TerminalNode TITLE() { return getToken(BlogParser.TITLE, 0); }
		public TerminalNode LINE() { return getToken(BlogParser.LINE, 0); }
		public TitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_title; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).enterTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).exitTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlogParserVisitor ) return ((BlogParserVisitor<? extends T>)visitor).visitTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TitleContext title() throws RecognitionException {
		TitleContext _localctx = new TitleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_title);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23); match(TITLE);
			setState(24); match(LINE);
			setState(25); match(END_ONE_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UrlContext extends ParserRuleContext {
		public TerminalNode URL() { return getToken(BlogParser.URL, 0); }
		public TerminalNode END_ONE_LINE() { return getToken(BlogParser.END_ONE_LINE, 0); }
		public TerminalNode LINE() { return getToken(BlogParser.LINE, 0); }
		public UrlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_url; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).enterUrl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).exitUrl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlogParserVisitor ) return ((BlogParserVisitor<? extends T>)visitor).visitUrl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UrlContext url() throws RecognitionException {
		UrlContext _localctx = new UrlContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_url);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27); match(URL);
			setState(28); match(LINE);
			setState(29); match(END_ONE_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateContext extends ParserRuleContext {
		public TerminalNode DATE() { return getToken(BlogParser.DATE, 0); }
		public TerminalNode END_ONE_LINE() { return getToken(BlogParser.END_ONE_LINE, 0); }
		public TerminalNode LINE() { return getToken(BlogParser.LINE, 0); }
		public DateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).enterDate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).exitDate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlogParserVisitor ) return ((BlogParserVisitor<? extends T>)visitor).visitDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DateContext date() throws RecognitionException {
		DateContext _localctx = new DateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(31); match(DATE);
			setState(32); match(LINE);
			setState(33); match(END_ONE_LINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TagsContext extends ParserRuleContext {
		public TerminalNode NL() { return getToken(BlogParser.NL, 0); }
		public TerminalNode TAGS() { return getToken(BlogParser.TAGS, 0); }
		public List<TerminalNode> COMMA() { return getTokens(BlogParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(BlogParser.COMMA, i);
		}
		public List<TerminalNode> WORDS() { return getTokens(BlogParser.WORDS); }
		public TerminalNode WORDS(int i) {
			return getToken(BlogParser.WORDS, i);
		}
		public TagsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tags; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).enterTags(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).exitTags(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlogParserVisitor ) return ((BlogParserVisitor<? extends T>)visitor).visitTags(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TagsContext tags() throws RecognitionException {
		TagsContext _localctx = new TagsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tags);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35); match(TAGS);
			setState(36); match(WORDS);
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(37); match(COMMA);
				setState(38); match(WORDS);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(44); match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DexContext extends ParserRuleContext {
		public CharsContext chars() {
			return getRuleContext(CharsContext.class,0);
		}
		public TerminalNode ABSTRACT() { return getToken(BlogParser.ABSTRACT, 0); }
		public TerminalNode END_MORE_LINES() { return getToken(BlogParser.END_MORE_LINES, 0); }
		public DexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).enterDex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).exitDex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlogParserVisitor ) return ((BlogParserVisitor<? extends T>)visitor).visitDex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DexContext dex() throws RecognitionException {
		DexContext _localctx = new DexContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_dex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); match(ABSTRACT);
			setState(47); chars();
			setState(48); match(END_MORE_LINES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContentContext extends ParserRuleContext {
		public CharsContext chars() {
			return getRuleContext(CharsContext.class,0);
		}
		public TerminalNode CONTENT() { return getToken(BlogParser.CONTENT, 0); }
		public TerminalNode END_MORE_LINES() { return getToken(BlogParser.END_MORE_LINES, 0); }
		public ContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).enterContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).exitContent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlogParserVisitor ) return ((BlogParserVisitor<? extends T>)visitor).visitContent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContentContext content() throws RecognitionException {
		ContentContext _localctx = new ContentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_content);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); match(CONTENT);
			setState(51); chars();
			setState(52); match(END_MORE_LINES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CharsContext extends ParserRuleContext {
		public TerminalNode CH(int i) {
			return getToken(BlogParser.CH, i);
		}
		public List<TerminalNode> CH() { return getTokens(BlogParser.CH); }
		public CharsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).enterChars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BlogParserListener ) ((BlogParserListener)listener).exitChars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BlogParserVisitor ) return ((BlogParserVisitor<? extends T>)visitor).visitChars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CharsContext chars() throws RecognitionException {
		CharsContext _localctx = new CharsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_chars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CH) {
				{
				{
				setState(54); match(CH);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}